[gd_scene load_steps=4 format=3 uid="uid://dh5xl2lfqsta2"]

[ext_resource type="Script" uid="uid://bj57vthdaqun0" path="res://Scenes/Title and Death Screen/game_over.gd" id="1_ooheg"]
[ext_resource type="AudioStream" uid="uid://dkb44108a647q" path="res://Artwork/Music/tense-crime-atmosphere-for-films-and-media-15s-237444.mp3" id="1_uo04k"]
[ext_resource type="PackedScene" uid="uid://iwlfqxqvh75f" path="res://Scenes/HUD/survival_timer.tscn" id="3_tukaa"]

[node name="Game Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ooheg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 1155.0
offset_bottom = 652.0
color = Color(0.00184107, 0.00184107, 0.00184107, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 63.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Game Over"

[node name="PlayGame" type="Button" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 460.0
offset_right = 674.0
offset_bottom = 516.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Try Again"

[node name="SurvivalTimer" parent="." instance=ExtResource("3_tukaa")]

[node name="SurvivalTimerLabel" parent="SurvivalTimer" index="0"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -17.5
offset_right = 48.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.975736, 0.975736, 0.975736, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_uo04k")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="PlayGame" to="." method="_on_play_game_pressed"]

[editable path="SurvivalTimer"]
